# ckanext-mysql2mongodb

./: .env  .gitignore  .python-version  MANIFEST.in  README.md  env.template  envrc.template  pyproject.toml  requirements.txt  setup.cfg  setup.py
ckanext/mysql2mongodb/: alembic.ini  models.py  plugin.py  settings.py
ckanext/mysql2mongodb/data_conv/: data_conversion.py  database_config.txt  database_connection.py  main.py  package_config.txt  schema_conversion.py  utilities.py
ckanext/mysql2mongodb/data_conv/dag/: conversion_flow.py  helper.py
ckanext/mysql2mongodb/data_conv/interfaces/: AbstractDataConversion.py  AbstractSchemaConversion.py
ckanext/mysql2mongodb/dataconv/: __init__.py  exceptions.py  settings.py
ckanext/mysql2mongodb/dataconv/constant/: consts.py  error_codes.py
ckanext/mysql2mongodb/dataconv/converter/: __init__.py  data_conversion.py
ckanext/mysql2mongodb/dataconv/dag/: data_conversion_flow.py
ckanext/mysql2mongodb/dataconv/database/: AbstractDatabaseHandler.py  MongoHandler.py  MySQLHandler.py  __init__.py  abstract_database_handler.py  cache_handler.py  database_factory.py  mongo_handler.py  mysql_handler.py  schema_handler.py  singleton.py  validator_log_handler.py
ckanext/mysql2mongodb/dataconv/database/schema/: __init__.py  validator_log.py
ckanext/mysql2mongodb/dataconv/engine/: __init__.py  lightweight_coreset.py
ckanext/mysql2mongodb/dataconv/file_system/: file_system_handler.py
ckanext/mysql2mongodb/dataconv/task/: mysql_mongo.py
ckanext/mysql2mongodb/dataconv/transform/: __init__.py  data_conversion.py  sql_transformation.py
ckanext/mysql2mongodb/dataconv/util/: command_lines.py  conversion_tools.py  data_conversion.py  helper.py
ckanext/mysql2mongodb/dataconv/validation/: validator.py
ckanext/mysql2mongodb/migrations/: env.py
ckanext/mysql2mongodb/migrations/versions/: a159239bcc31_create_validator_logs_database.py
ckanext/mysql2mongodb/tests/: test_plugin.py
testdata/mysql/: Chinook.sql  classicmodels.sql  compose_key.sql  sportsdb_qa.sql  world.sql  world_x.sql  xtoss.sql
