[tool.poetry]
name = "ckanext_mysql2mongodb"
version = "1.0"
description = "Python tool for converting data from mysql to mongodb"
authors = ["San Dang <dangthaisan@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
wheel = "^0.37.1"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"
pymongo = "~=4.0.2"
mysql-connector-python = "~=8.0.28"
apache-airflow = "~=2.2.4"
numpy = "1.22.2"
pandas = "^1.4.1"
pyarrow = "^7.0.0"
SQLAlchemy = ">1.3.18,<1.4.0"
redis = "^4.2.1"
alembic = "^1.7.7"
Faker = "^13.3.4"
Shapely = "^1.8.1"
PyYAML = "5.4.1"
PyMySQL = "^1.0.2"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
